*** Vxxxx
*** New solver : stationaryGroundwater2DFoam
************************

### Solvers

- groundwater2DFoam

  - water bilan added (with stationary option to stop run)
  - dhmax is relative to the max of hwater field
  - potentialEqn is solved instead of hwater equation (identical to stationary)

- stationaryGroundwater2DFoam

  - "stationary" version of groundwater2DFoam
  - fixedPotentialList added in 

### Tutorials

- stationaryGroundwater2DFoam

  - new tutorial relative to the new solver

- groundwater2DFoam

  - updated to be similar to the stationary case

### Libraries

- toolsGIS

  - new library containing classes for GIS manipulation
  - first class is MNT file used to read xyz file and performed
    bilinear interpolation.

************************
*** V1809
*** New solvers : groundwater2DFoam + groundwaterTransportFoam
************************

### Solvers

- groundwaterFoam

  - wellbore added to handle injection/extraction
  
- impesFoam/anisoImpesFoam/groundwaterFoam

  - wellboreProperies is a subDict of transportProperties
  - Winj/Wext (wellbore positions) are moved from 0/ to constant/

- porousScalarTransportFoam

  - retard coefficient "R" added
  - new time-stepping (using dCmax absolute and relative)

- groundwater2DFoam

  - new solver for 2D groundwater flow modeling (Dupuit's hypothesis)

- groundwaterTransportFoam

  - new solver coupling groundwaterFoam and porousScalarTransportFoam
  the C component is transported in fluid phase with variable saturation

### Libraries

- dispersionModels

  - alphaL/alphaT can be heterogeneous (volScalarField) in the

### Tutorials

- impesFoam/anisoImpesFoam

  - updated (wellboreProperties removed)

- groundwater2DFoam

  - 2 test case for solver validation

### Utilities

- setFieldsFromXY (replace setPermeabilityFieldFromXY)

  - can be used to initialize any volScalarFields from a rectangularMatrix
    (x | y | value) with linear interpolation between 3 closest points
